feat: Crude implementation of client_credential oauth grant type
